--- a/.github/workflows/arc-test.yaml
+++ b/.github/workflows/arc-test.yaml
@@ -5,7 +5,7 @@ on:
 jobs:
   runner-check:
     name: Runner Check
-    runs-on: self-hosted
+    runs-on: arc-runner-set
     # runs-on: ubuntu-latest
     # environment:
     #  name: prod  # 생성한 환경 이름
